Update CycleComponent.java